[package]
name = "enxame-view"
version = "0.1.1"
edition = "2024"
rust-version = "1.89.0"
license = "MIT"
authors = ["Pleme Team <team@pleme.io>"]
repository = "https://github.com/pleme-io/enxame-view"
homepage = "https://github.com/pleme-io/enxame-view"
keywords = ["bittorrent", "no-std", "serde", "view-model"]
categories = ["data-structures"]
description = "ENXAME shared view-model — the typed snapshot every face (web, gui, tui, cli, rpc) renders"

[dependencies]
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
serde_json = "1"

[lints.clippy]
pedantic = "warn"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
